# Voxdepthcode

./: CMakeLists.txt  DatasetGen.py  README.md  TIPS  helpers.cpp  helpers.h  main.cpp  setOutDir.sh  test.sh  testUnified.cpp  toSurface.cu  toSurface.h  unifiedSurface.cu  unifiedSurface.h  voxel.cpp  voxel.cu  voxel.h
configs/: configs.txt
utils/: createData.py  createOccmap.py  diff.py  errorDist.py  maskedRMSE.py  maskedRMSERS.py  maskedRMSLE.py  psnr.py  psnrMidair.py  psnrMidairDS.py  psnrRealsense.py  realsenseHoleFilling.py  renameOuts.py  time.txt
